@@ -45,24 +45,6 @@ destroy (EAPMethod *parent)
 }
 
 static gboolean
-validate_filepicker (GladeXML *xml, const char *name, gboolean ignore_blank)
-{
-	GtkWidget *widget;
-	char *filename;
-	gboolean success = TRUE;
-
-	widget = glade_xml_get_widget (xml, name);
-	g_assert (widget);
-	filename = gtk_file_chooser_get_filename (GTK_FILE_CHOOSER (widget));
-	if (!filename)
-		return ignore_blank ? TRUE : FALSE;
-
-	success = g_file_test (filename, G_FILE_TEST_EXISTS | G_FILE_TEST_IS_REGULAR);
-	g_free (filename);
-	return success;
-}
-
-static gboolean
 validate (EAPMethod *parent)
 {
 	GtkWidget *widget;
@@ -71,7 +53,7 @@ validate (EAPMethod *parent)
 	EAPMethod *eap = NULL;
 	gboolean valid = FALSE;
 
-	if (!validate_filepicker (parent->xml, "eap_ttls_ca_cert_button", TRUE))
+	if (!eap_method_validate_filepicker (parent->xml, "eap_ttls_ca_cert_button", TRUE, FALSE, NULL))
 		return FALSE;
 
 	widget = glade_xml_get_widget (parent->xml, "eap_ttls_inner_auth_combo");
